Bug Fix _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ author:
   email: "hendisantika@gmail.com"
   facebook: hendisantika  # eg. daattali
   github: hendisantika   # eg. daattali
-  twitter: @hendisantika34   # eg. daattali
+  twitter: hendisantika34   # eg. daattali
   reddit: yourname    # eg. daattali
   google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
   linkedin: yourname  # eg. daattali
